form label z-index fix.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -78,7 +78,7 @@ a[role=button] {
     border-radius: 20px;
 }
 
-label[class*="MuiInputLabel-outlined"] {
+form label {
     z-index: 99;
 }
 
